k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nrdc-poc
  labels:
    app.kubernetes.io/part-of: nrdc-poc
